# introns-db-fill

./: CMakeLists.txt  README.md  create_database.sql  database.cpp  database.h  gbkparser.cpp  gbkparser.h  gzipreader.cpp  gzipreader.h  iniparser.cpp  iniparser.h  introns_db_fill.pro  logger.cpp  logger.h  main.cpp  structures.h
